refact: add assertNotNull to tests